--- a/Responsiveness-Portfolio/contact.html
+++ b/Responsiveness-Portfolio/contact.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Krub|PT+Sans|Quicksand|Raleway|Source+Sans+Pro" rel="stylesheet">
-   
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>My Portfolio</title>
+          <link rel="stylesheet" type="text/css" href="assets/style/style.css" />
+          <link href="https://fonts.googleapis.com/css?family=Krub|PT+Sans|Quicksand|Raleway|Source+Sans+Pro" rel="stylesheet">
+      </head>
 
 <body>
         <div class="header">
