--- a/Responsiveness-Portfolio/index.html
+++ b/Responsiveness-Portfolio/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/style/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Krub|PT+Sans|Quicksand|Raleway|Source+Sans+Pro" rel="stylesheet">
 </head>
 
 <body>
 
 	<div class="header">
+    <div class="header">
         <h1>Liana Morrison</h1>
     <nav>
     <ul>
@@ -24,12 +25,26 @@
 </div>
 
 <div class="content">
+        <nav>
+            <ul>
+                <div class="header-right">
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="content">
         <h2>About Me</h2>
         <HR>
             <br>
             
+        <br>
+
         <div>
-		        <img src="portfolio-pic.jpg" width= 400px class="snake">
+	
+            <img src="assets/images/portfolio-pic.jpg" width=400px class="snake">
         </div>
                 <p>     
             Hi! I'm Liana Morrison and I'm currently enrolled at the University of Minnesotas Coding Bootcamp. 
@@ -39,12 +54,14 @@
             My clients have included Lady Gaga and Peter Van Der Veen. I currently partner with a boutique studio in Minneapolis - 
             Open Minds Fusion Studio. My passion project is the Minnesota Dancers Collective, which promotes safer, earlier Dance Parties throughout the twin cities.
             I'm also a mom to the best 5-year old girl in the world and our family includes a 5 year-old Corgi-mix named Penny and a Western Hognose Snake named Magical.
-            The snake in my bio pic is from our friend, Emily's collection - an 8ft boa constrictor named Doug!
         </p>
 	</div>
+    </div>
 
 
     <footer class="footer"> <p> &copy; 2019 Liana Morrison</p></footer>
+   
 
 </body>
-</html>
+
+</html> 
