--- a/Responsiveness-Portfolio/portfolio.html
+++ b/Responsiveness-Portfolio/portfolio.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Krub|PT+Sans|Quicksand|Raleway|Source+Sans+Pro" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>My Portfolio</title>
+          <link rel="stylesheet" type="text/css" href="assets/style/style.css" />
+          <link href="https://fonts.googleapis.com/css?family=Krub|PT+Sans|Quicksand|Raleway|Source+Sans+Pro" rel="stylesheet">
+      </head>
 
 <body>
     <div class="header">
@@ -32,7 +32,7 @@
         <div class="column">
             <div class="container">
                 <div class="image">
-                <img src="bow pose.jpg" alt="bow pose"
+                <img src="assets/images/bow pose.jpg" alt="bow pose"
     style="width:100%">
                 <div class="centered">Yoga</div>
             </div>
@@ -41,7 +41,7 @@
         <div class="column">
             <div class="container">
                 <div class="image">
-                <img src="breathe.jpg" alt="soul breathing"
+                <img src="assets/images/breathe.jpg" alt="soul breathing"
     style="width:100%">
                 <div class="centered">Soul Breathing</div>
             </div>
@@ -50,7 +50,7 @@
         <div class="column">
             <div class="container">
                 <div class="image">
-                <img src="python.JPG" alt="snakes"
+                <img src="assets/images/python.JPG" alt="snakes"
     style="width:100%">
                 <div class="centered">Snakes</div>
             </div>
@@ -64,7 +64,7 @@
             <div class="column">
                 <div class="container">
                     <div class="image">
-                    <img src="oreos.JPG" alt="vegan"
+                    <img src="assets/images/oreos.JPG" alt="vegan"
         style="width:100%">
                     <div class="centered">Vegan</div>
                 </div>
@@ -73,7 +73,7 @@
             <div class="column">
                 <div class="container">
                     <div class="image">
-                    <img src="corgi.JPG" alt="dogs"
+                    <img src="assets/images/corgi.JPG" alt="dogs"
         style="width:100%">
                     <div class="centered">Dogs</div>
                 </div>
@@ -82,7 +82,7 @@
             <div class="column">
                 <div class="container">
                     <div class="image">
-                    <img src="MNDC.png" alt="mn dancers collective"
+                    <img src="assets/images/MNDC.png" alt="mn dancers collective"
         style="width:100%">
                     <div class="centered">MN Dancers Collective</div>
                 </div>
