--- a/Responsiveness-Portfolio/index.html
+++ b/Responsiveness-Portfolio/index.html
@@ -24,16 +24,6 @@
 	</div>
 </div>
 
-<div class="content">
-        <nav>
-            <ul>
-                <div class="header-right">
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
 
     <div class="content">
         <h2>About Me</h2>
@@ -44,9 +34,10 @@
 
         <div>
 	
-            <img src="assets/images/portfolio-pic.jpg" width=400px class="snake">
+            <img src="assets/images/headshot.jpg" width=400px class="Liana Morrison">
         </div>
-                <p>     
+        <div class="container">
+                <p class="bio">     
             Hi! I'm Liana Morrison and I'm currently enrolled at the University of Minnesotas Coding Bootcamp. 
             I have a BA in Dietetics and an Applied MBA in Small Business & Entreprentureship. 
             For the last 12 years, I've managed yoga studios across the country and have contracted 
@@ -55,6 +46,7 @@
             Open Minds Fusion Studio. My passion project is the Minnesota Dancers Collective, which promotes safer, earlier Dance Parties throughout the twin cities.
             I'm also a mom to the best 5-year old girl in the world and our family includes a 5 year-old Corgi-mix named Penny and a Western Hognose Snake named Magical.
         </p>
+    </div>
 	</div>
     </div>
 
